<resources>
    <string name="app_name">Math_Game</string>
    <string name="game_title">Math Game</string>
    <string name="start_button_text">Start</string>
    <string name="quit_button_text">Quit</string>
    <string name="high_score_text">High score: 0</string>
    <string name="score_text">Score: 0</string>
    <string name="title_text">Welcome</string>
    <string name="options_text">Options</string>
    <string name="settings_title">Settings</string>
    <string name="background_choose_text">Background Choose</string>
    <string name="drop_object_text">Drop Object</string>
    <string name="back_text">Back</string>
</resources>
