<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/questionBox"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/light_blue"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_2">

        <ImageView
            android:id="@+id/basket"
            android:layout_width="140dp"
            android:layout_height="87dp"
            android:layout_gravity="bottom"
            android:src="@drawable/basket"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/soccerBall_1"
            android:layout_width="99dp"
            android:layout_height="112dp"
            android:src="@drawable/soccer_ball"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/soccerBall_2"
            android:layout_width="99dp"
            android:layout_height="112dp"
            android:src="@drawable/soccer_ball"
            android:visibility="invisible"/>


        <ImageView
            android:id="@+id/soccerBall_3"
            android:layout_width="99dp"
            android:layout_height="112dp"
            android:src="@drawable/soccer_ball"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/soccerBall_4"
            android:layout_width="99dp"
            android:layout_height="112dp"
            android:src="@drawable/soccer_ball"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/start_game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_title"
                android:textSize="40sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="200dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_score_text"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                />

            <Button
                android:id="@+id/start_button"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/start_button_text"
                android:textStyle="bold"
                android:textSize="30sp"
                android:background="@color/white"
                android:layout_marginTop="50dp"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/quit_button_text"
                android:textStyle="bold"
                android:textSize="30sp"
                android:background="@color/white"
                android:layout_marginTop="50dp"
                />

        </LinearLayout>

    </FrameLayout>


</LinearLayout>